force-app/main/default/objects/Test_Plan__c/Test_Plan__c.object-meta.xml
<CustomObject>
    <description>SM - This object will hold a collection of test scenario or each project iteration</description>
    <label>Test Plan</label>
    <nameField>
        <label>Test Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>