force-app/main/default/objects/Test_Plan__c/fields/Test_Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>Test_Plan_Type__c</fullName>
    <label>Test Plan Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UAT</fullName>
            </value>
            <value>
                <fullName>System</fullName>
            </value>
            <value>
                <fullName>PROD Smoke Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>